<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/title_activity_afterstart"
    tools:context="com.khaleghian.masi.xolib.Afterstart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:weightSum="2.1"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/playerone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:text="@string/player1"
            android:textColor="@color/pink"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/yellow"
            android:layoutDirection="ltr" />

        `

        <TextView
            android:id="@+id/playertwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:text="@string/player2"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:weightSum="2.1">

        <TextView
            android:id="@+id/p1score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="55sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/yellow"
            android:layoutDirection="ltr" />

        <TextView
            android:id="@+id/p2score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="55sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tzz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="kzz"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="@dimen/line_thickness"
            android:layout_height="match_parent"
            android:background="@color/lineColor"
            android:layoutDirection="ltr"></View>

        <ImageView
            android:id="@+id/tzo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="kzo"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="@dimen/line_thickness"
            android:layout_height="match_parent"
            android:background="@color/lineColor"
            android:layoutDirection="ltr"></View>

        <ImageView
            android:id="@+id/tzt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="kzt"
            tools:ignore="ContentDescription" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thickness"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="24dp"
        android:background="@color/lineColor"
        android:layoutDirection="ltr"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/toz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="koz"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="@dimen/line_thickness"
            android:layout_height="match_parent"
            android:background="@color/lineColor"
            android:layoutDirection="ltr"></View>

        <ImageView
            android:id="@+id/too"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="koo"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="@dimen/line_thickness"
            android:layout_height="match_parent"
            android:background="@color/lineColor"
            android:layoutDirection="ltr"></View>

        <ImageView
            android:id="@+id/tot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="kot"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thickness"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="24dp"
        android:background="@color/lineColor"
        android:layoutDirection="ltr"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ttz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="ktz"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="@dimen/line_thickness"
            android:layout_height="match_parent"
            android:background="@color/lineColor"
            android:layoutDirection="ltr"></View>

        <ImageView
            android:id="@+id/tto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="kto"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="@dimen/line_thickness"
            android:layout_height="match_parent"
            android:background="@color/lineColor"
            android:layoutDirection="ltr"></View>

        <ImageView
            android:id="@+id/ttt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layoutDirection="ltr"
            android:onClick="ktt"
            tools:ignore="ContentDescription" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:gravity="center"
        android:weightSum="3">


        <TextView
            android:id="@+id/gameCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/game"
            android:textColor="@color/pink" />


        <TextView
            android:id="@+id/gamenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:layout_weight="1.7"
        android:layoutDirection="ltr"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonwhat7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:layoutDirection="ltr"
            android:visibility="visible"
            app:backgroundTint="#92e3ec "
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/what"
            tools:ignore="KeyboardInaccessibleWidget" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonPause7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:layoutDirection="ltr"
            android:visibility="invisible"
            app:backgroundTint="#fd9298 "
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/floatingActionButtongame7"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButtongame7"
            app:layout_constraintTop_toTopOf="@+id/floatingActionButtongame7"
            app:srcCompat="@drawable/pause"
            tools:ignore="KeyboardInaccessibleWidget" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtongame7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:layoutDirection="ltr"
            android:visibility="invisible"
            app:backgroundTint="#fd9298 "
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/floatingActionButtonwhat7"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonwhat7"
            app:layout_constraintTop_toTopOf="@+id/floatingActionButtonwhat7"
            app:srcCompat="@drawable/gamefab"
            tools:ignore="KeyboardInaccessibleWidget" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
